welcome.lessons.welcome.variables.Variables.scala.error
Variables:11: error: not found: value dejFfait
	dejFfait=dejaFait+1 ;
        ^