welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int=0
var dejaFait:Int=0
while (estSurBiscuit==false) {
	avance();
	nbPas=nbPas+1 ;
}
prendBiscuit();
while (nbPas!=dejaFait){
	recule();
	dejFfait=dejaFait+1 ;
}
poseBiscuit();
